# opponent-adjusted-metrics

./: .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  Makefile  POSITION_ANALYSIS_COMPLETION.md  PROJECT_REPORT.md  PROJECT_STATUS.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  14f289cc51b0_add_event_type_tables.py  2b70afefcdee_drop_unique_competition_id.py  9b2a1e3d7c8f_add_index_on_events_raw_event_id.py  c7c3d2a9b1f4_add_pass_end_location.py
dashboard/: README.md  app.py  requirements.txt
dashboard/components/: __init__.py  charts.py  data_loader.py  pitch_plots.py
dashboard/pages/: 1_📊_Overview.py  2_⚽_Shot_Explorer.py  3_📈_Team_Analysis.py  4_👤_Player_Stats.py
docs/: data_dictionary.md  evaluation_protocol.md  metric_definitions.md
docs/analysis/: cxa_position_cluster_analysis.md
docs/methodology/: 01_data_ingestion.md  02_data_analysis.md  03_data_modelling.md  04_prediction_module.md  05_analysis_results.md
docs/plan/: cxa_phase_plan.md
notebooks/: cxg_visualisation.ipynb
scripts/: analyze_cxa_baselines.py  build_cxa_baselines.py  build_cxa_training_dataset.py  build_opponent_profiles.py  build_shot_features.py  fetch_statsbomb_subset.py  ingest_competitions.py  ingest_events.py  ingest_matches.py  migrate_postgres_to_sqlite.py  normalize_events.py  run_cxa_analysis.py  run_cxg_analysis.py  summarize_cxa_baselines.py
src/opponent_adjusted/: config.py
tests/: conftest.py  test_api.py.skip  test_config.py  test_e2e_features_api.py  test_e2e_ingestion.py  test_geometry.py
(+180 files in other folders)
